--- a/520_Project/csv-query-app/package.json
+++ b/520_Project/csv-query-app/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.11",
+    "crypto-js": "^4.2.0",
     "csv-query-app": "file:",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
